--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shoping</title>
     <link rel="icon" type="image/x-icon"
-        href="/Images/green-leaf-shopping-cart-logo-design-inspiration-shopping-cart-and-leaf-professional-logo-design-vector1.iff">
+        href="./Images/green-leaf-shopping-cart-logo-design-inspiration-shopping-cart-and-leaf-professional-logo-design-vector.jpg">
     <link rel="stylesheet" href="./style.css">
 </head>
 
