--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="card">
                 <img class="product" src="https://fakestoreapi.com/img/61pHAEJ4NML._AC_UX679_.jpg" alt="DANVOUY-Tshirt">
                 <div class="name">DANVOUY Womens T Shirt Casual Cotton Short</div>
-                <div style="font-style: italic; font-size: 10px;">95%Cotton,5%Spandex, Features: Casual, Short Sleeve,
+                <div style="font-style: italic; font-size: 15px;">95%Cotton,5%Spandex, Features: Casual, Short Sleeve,
                     Letter Print,V-Neck,Fashion Tees, The fabric
                     is soft and has some stretch.</div>
-                <div style="font-size: 15px;">Price: Rs.199</div>
+                <div style="font-size: 18px;">Price: Rs.199</div>
                 <button type="button"></button>
 
 
@@ -30,9 +30,9 @@
                 <img class="product" src="https://fakestoreapi.com/img/51eg55uWmdL._AC_UX679_.jpg"
                     alt="Short Sleeve Boat Neck V">
                 <div class="name">MBJ Women's Solid Short Sleeve Boat Neck V</div>
-                <div style="font-style: italic; font-size: 10px;">95% RAYON 5% SPANDEX, Made in USA or Imported, Do
+                <div style="font-style: italic; font-size: 15px;">95% RAYON 5% SPANDEX, Made in USA or Imported, Do
                     Not Bleach, Lightweight fabric with great stretch for comfort.</div>
-                <div style="font-size: 15px;">Price: Rs.199</div>
+                <div style="font-size: 18px;">Price: Rs.199</div>
                 <button type="button"></button>
             </div>
         </div>
@@ -40,9 +40,9 @@
             <div class="card">
                 <img class="product" src="https://fakestoreapi.com/img/71z3kpMAYsL._AC_UY879_.jpg" alt="Opna-Moisture">
                 <div class="name">Opna Women's Short Sleeve Moisture</div>
-                <div style="font-style: italic; font-size: 10px;">100% Polyester, Machine wash, 100% cationic
+                <div style="font-style: italic; font-size: 15px;">100% Polyester, Machine wash, 100% cationic
                     polyester interlock, more feminine silhouette and Added Comfort.</div>
-                <div style="font-size: 15px;">Price: Rs.199</div>
+                <div style="font-size: 18px;">Price: Rs.199</div>
                 <button type="button"></button>
             </div>
         </div>
@@ -50,9 +50,9 @@
             <div class="card">
                 <img class="product" src="https://fakestoreapi.com/img/71HblAHs5xL._AC_UY879_-2.jpg" alt="Rain Jacket">
                 <div class="name">Rain Jacket Women Windbreaker Striped Climbing Raincoats</div>
-                <div style="font-style: italic; font-size: 10px;">Lightweight perfet for trip or casual wear-Long
+                <div style="font-style: italic; font-size: 15px;">Lightweight perfet for trip or casual wear-Long
                     sleeve with hooded, adjustable drawstring waist design.</div>
-                <div style="font-size: 15px;">Price: Rs.399</div>
+                <div style="font-size: 18px;">Price: Rs.399</div>
                 <button type="button"></button>
             </div>
         </div>
@@ -60,10 +60,10 @@
             <div class="card">
                 <img class="product" src="https://fakestoreapi.com/img/51Y5NI-I5jL._AC_UX679_.jpg" alt="Winter Coats">
                 <div class="name">BIYLACLESEN Women's 3-in-1 Snowboard Jacket Winter Coats</div>
-                <div style="font-style: italic; font-size: 10px;"> Material: 100% Polyester; Detachable Liner Fabric:
+                <div style="font-style: italic; font-size: 15px;"> Material: 100% Polyester; Detachable Liner Fabric:
                     Warm Fleece. Detachable
                     Functional Liner: Skin Friendly, Lightweigt and Warm.</div>
-                <div style="font-size: 15px;">Price: Rs.399</div>
+                <div style="font-size: 18px;">Price: Rs.399</div>
                 <button type="button"></button>
             </div>
         </div>
@@ -71,9 +71,9 @@
             <div class="card">
                 <img class="product" src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg" alt="Gaming Monitor">
                 <div class="name">Samsung 49-Inch CHG90 144Hz Curved Gaming Monitor</div>
-                <div style="font-style: italic; font-size: 10px;"> 49 INCH SUPER ULTRAWIDE 32:9 CURVED GAMING MONITOR
+                <div style="font-style: italic; font-size: 15px;"> 49 INCH SUPER ULTRAWIDE 32:9 CURVED GAMING MONITOR
                     with dual 27 inch screen side by side QUANTUM DOT (QLED) TECHNOLOGY.</div>
-                <div style="font-size: 15px;">Price: Rs.2999</div>
+                <div style="font-size: 18px;">Price: Rs.22999</div>
                 <button type="button"></button>
             </div>
         </div>
@@ -81,9 +81,9 @@
             <div class="card">
                 <img class="product" src="https://fakestoreapi.com/img/81QpkIctqPL._AC_SX679_.jpg" alt="Acer Monitor">
                 <div class="name">Acer SB220Q bi 21.5 inches Full HD (1920 x 1080) IPS Ultra-Thin</div>
-                <div style="font-style: italic; font-size: 10px;">21. 5 inches Full HD (1920 x 1080) widescreen IPS
+                <div style="font-style: italic; font-size: 15px;">21. 5 inches Full HD (1920 x 1080) widescreen IPS
                     display And Radeon free Sync technology. No compatibility for VESA Mount Refresh Rate: 75Hz.</div>
-                <div style="font-size: 15px;">Price: Rs.2999</div>
+                <div style="font-size: 18px;">Price: Rs.22999</div>
                 <button type="button"></button>
             </div>
         </div>
@@ -91,9 +91,9 @@
             <div class="card">
                 <img class="product" src="https://fakestoreapi.com/img/61mtL65D4cL._AC_SX679_.jpg" alt="Hard Drive">
                 <div class="name">WD 4TB Gaming Drive Works with Playstation 4 Portable External Hard Drive</div>
-                <div style="font-style: italic; font-size: 10px;">Expand your PS4 gaming experience, Play anywhere Fast
+                <div style="font-style: italic; font-size: 15px;">Expand your PS4 gaming experience, Play anywhere Fast
                     and easy, setup Sleek design with high capacity, 3-year manufacturer's limited warranty</div>
-                <div style="font-size: 15px;">Price: Rs.5999</div>
+                <div style="font-size: 18px;">Price: Rs.5999</div>
                 <button type="button"></button>
             </div>
         </div>
@@ -102,9 +102,9 @@
                 <img class="product" src="https://fakestoreapi.com/img/51UDEzMJVpL._AC_UL640_QL65_ML3_.jpg"
                     alt="Earrings">
                 <div class="name">Pierced Owl Rose Gold Plated Stainless Steel Double</div>
-                <div style="font-style: italic; font-size: 10px;">Rose Gold Plated Double Flared Tunnel Plug Earrings.
+                <div style="font-style: italic; font-size: 15px;">Rose Gold Plated Double Flared Tunnel Plug Earrings.
                     Made of 316L Stainless Steel</div>
-                <div style="font-size: 15px;">Price: Rs.599</div>
+                <div style="font-size: 18px;">Price: Rs.599</div>
                 <button type="button"></button>
             </div>
         </div>
@@ -112,8 +112,8 @@
             <div class="card">
                 <img class="product" src="https://fakestoreapi.com/img/61U7T1koQqL._AC_SX679_.jpg" alt="SSD">
                 <div class="name">SanDisk SSD PLUS 1TB Internal SSD - SATA III 6 Gb/s</div>
-                <div style="font-style: italic; font-size: 10px;">Easy upgrade for faster boot up, shutdown, application load and response (As compared to 5400 RPM SATA 2.5” hard drive</div>
-                <div style="font-size: 15px;">Price: Rs.12999</div>
+                <div style="font-style: italic; font-size: 15px;">Easy upgrade for faster boot up, shutdown, application load and response (As compared to 5400 RPM SATA 2.5” hard drive)</div>
+                <div style="font-size: 18px;">Price: Rs.12999</div>
                 <button type="button"></button>
             </div>
         </div>
